crates/cribo/tests/snapshots/bundled_code@class_pattern_codegen.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/class_pattern_codegen/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
records = _cribo.types.SimpleNamespace(__name__='records')
class Text:
    __match_args__ = "value",

    def __init__(self, value: str) -> None:
        self.value = value
Text.__module__ = 'records'
class Record:
    __match_args__ = "kind", "payload"

    def __init__(self, kind: str, payload: object, priority: int) -> None:
        self.kind = kind
        self.payload = payload
        self.priority = priority
Record.__module__ = 'records'
class Envelope:
    __match_args__ = "record",

    def __init__(self, record: Record, source: str) -> None:
        self.record = record
        self.source = source
Envelope.__module__ = 'records'
def summarize(value: object) -> str:
    match value:
        case Envelope(Record("event", Text(str(text)), priority=int(priority)), source=str(source)) if (priority > 0):
            return f"{source}:event:{text}:{priority}"
        case _:
            pass
    return "no-match"
def inspect_patterns(value: object) -> str:
    match value:
        case {"active": True, "items": [Text(str(first)), *remaining], **metadata} as whole:
            return f"mapping:{first}:{len(remaining)}:" f"{metadata['source']}:{len(whole)}"
        case Text("left" | "right"):
            return "or-pattern"
        case _:
            pass
    return "other"
def inspect_grouped_as(value: object) -> str:
    match value:
        case (Text("left") as matched) | (Text("right") as matched):
            return f"grouped-as:{matched.value}"
        case _:
            pass
    return "other"
def inspect_nested_as(value: object) -> str:
    match value:
        case (Text("nested") as matched) as whole:
            return f"nested-as:{matched.value}:{whole.value}"
        case _:
            pass
    return "other"
records.Envelope = Envelope
records.Record = Record
records.Text = Text
records.inspect_grouped_as = inspect_grouped_as
records.inspect_nested_as = inspect_nested_as
records.inspect_patterns = inspect_patterns
records.summarize = summarize
class Outcome:
    __match_args__ = "code",

    def __init__(self, code: int, payload: object) -> None:
        self.code = code
        self.payload = payload
event = records.Envelope(records.Record("event", records.Text("hello"), priority=3), source="api")
print(records.summarize(event))
print(records.inspect_patterns({"active": True, "items": [records.Text("first"), records.Text("second")], "source": "fixture"}))
print(records.inspect_patterns(records.Text("left")))
print(records.inspect_grouped_as(records.Text("right")))
print(records.inspect_nested_as(records.Text("nested")))
match Outcome(200, event):
    case Outcome(int(code), payload=records.Envelope(records.Record("event", records.Text(str(text)), priority=int(priority)), source=str(source))):
        print(f"entry:{code}:{source}:{text}:{priority}")
    case _:
        print("entry:no-match")
