crates/cribo/tests/snapshots/bundled_code@conditional_exception_binding.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_exception_binding/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('exception_source', '_cribo_init___cribo_b407bb_exception_source', 'exception_source', False)
_cribo_finder_local.register('exception_observer', '_cribo_init___cribo_124c30_exception_observer', 'exception_observer', False)
exception_observer = _cribo.types.SimpleNamespace(__name__='exception_observer', __initializing__=False, __initialized__=False)
_cribo_finder.bind('exception_observer', exception_observer)
exception_source = _cribo.types.SimpleNamespace(__name__='exception_source', __initializing__=False, __initialized__=False)
_cribo_finder.bind('exception_source', exception_source)
def _cribo_init___cribo_124c30_exception_observer(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = None
    global exception_source
    exception_source = _cribo_init___cribo_b407bb_exception_source(exception_source)
    _cribo_self.exception_source = exception_source

    def observe_error():
        return str(exception_source.error)
    observe_error.__module__ = 'exception_observer'
    observe_error.__qualname__ = 'observe_error'
    _cribo_self.observe_error = observe_error

    def error_was_cleaned():
        return not hasattr(exception_source, "error")
    error_was_cleaned.__module__ = 'exception_observer'
    error_was_cleaned.__qualname__ = 'error_was_cleaned'
    _cribo_self.error_was_cleaned = error_was_cleaned
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
exception_observer.__init__ = _cribo_init___cribo_124c30_exception_observer
def _cribo_init___cribo_b407bb_exception_source(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = None
    global exception_observer
    try:
        raise RuntimeError("visible")
    except RuntimeError as error:
        exception_source.error = error
        try:
            exception_observer = _cribo_init___cribo_124c30_exception_observer(exception_observer)
            exception_source.exception_observer = exception_observer
            OBSERVED_ERROR = exception_observer.observe_error()
            exception_source.OBSERVED_ERROR = OBSERVED_ERROR
            del error
            if _cribo.builtins.hasattr(exception_source, 'error'):
                _cribo.builtins.delattr(exception_source, 'error')
        finally:
            if _cribo.builtins.hasattr(exception_source, 'error'):
                _cribo.builtins.delattr(exception_source, 'error')
    CLEANED_ERROR = exception_observer.error_was_cleaned()
    _cribo_self.CLEANED_ERROR = CLEANED_ERROR
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
exception_source.__init__ = _cribo_init___cribo_b407bb_exception_source
exception_source = _cribo_init___cribo_b407bb_exception_source(exception_source)
print(exception_source.OBSERVED_ERROR)
print(exception_source.CLEANED_ERROR)
